Remove KAPT support (#1848)
* Remove KAPT support

* Stick KSP on the root classpath

* Another

* Another